styles.css
:root{
    font-family: "Rubik", sans-serif;
}
body{
    margin: 0;
    padding: 0;
    background-color: #c7d2fe
}
p{
    padding: 0;
    margin: 0;
    display: inline;
}
h2{
    padding: 0;
    margin: 0;
}
button{
    margin: 0;
    padding: 0;
    border: none;
    background: #6366f1;
    font: inherit;
    color: white;
    height: 35px;
    width: 100px;
    border-radius: 20px;
}
button:hover{
    background: #40419e;
    cursor: pointer;
}
i:hover{
    cursor: pointer;
}
.container{
    height: 100vh;
    display: grid;
    grid-template-columns: 80px 1fr;
    grid-template-rows: 130px 1fr;
    overflow: hidden;
}


.sidebar{
    color: white;
    background-color:#6366f1;
    display: grid;
    grid-template-rows: 480px;
    align-items: start;
    padding: 1.2rem;
    font-size: 1.2rem;
    font-weight: 900;
    grid-row: 1/3;
    z-index: 1;
    width: 42px;
    transition: width 250ms ease;
}
.sidebar:hover{
    width: 200px;
    box-shadow: 3px 0px 6px rgba(0, 0, 0, 0.3);
}
.sidebar-tabs{
    display: grid;
    height: 100%;
    grid-template-rows: repeat(12, 1fr);
    grid-template-columns: 1fr;
    align-items: center;
    column-gap: 5px;
}
.sidebar-tabs>p{
    display: none;  
}
.sidebar:hover .sidebar-tabs>p {
    display: block; 
    animation: fadeIn 0.3s;
}

.sidebar:hover .sidebar-tabs{
    grid-template-columns: 1fr 4fr;
}
.sidebar:hover .spacer{
    grid-column: 1 / 3;
}

.sidebar-tabs>i{
    justify-self: center;
}
.sidebar-tabs :nth-child(1),
.sidebar-tabs :nth-child(2){
    font-size: 1.5rem;
}
.hamburger{
    transform: rotate(0deg);
    transition: transform 0.7s;
}
.sidebar:hover .hamburger{
    transform: rotate(-180deg);
}
.header{
    background-color: #eef2ff;
    height: 130px;
    display: grid;
    grid-template-rows: 1fr 1fr;
    box-shadow: 0px 2px 7px rgba(0, 0, 0, 0.3);
    padding-right: 30px;
    padding-left: 15px;
    
}

.header> :nth-child(1){
    font-weight: 800;
    padding: 5px;
    display: grid;
    grid-template-columns: 60px 3fr 60px 60px 1fr;
    align-items: center;
    justify-items: center;
}
.header> :nth-child(1)>img{
    height: 35px;
    border-radius: 50%;
}
.header> :nth-child(2){
    display: grid;
    grid-template-columns: 7fr 5fr; 
}
.greetings{
    display: grid;
    grid-template-columns: 110px 1fr;
    align-items: start;
    justify-items: center;
}
.greetings>p{
    margin-top: -8px;
    justify-self: start;
    font-size: 1.5rem;
}
.greetings>p>span{
    font-size: 0.8rem;
}
.greetings>img{
    height: 50px;
    border-radius: 50%;
}
.buttons{
    display: grid;
    grid-template-columns: repeat(3, 1fr);
    gap: 10px;
    align-items: center;
    justify-items: center;
}
input[type="search"]{
    width: 85%;
    height: 50%;
    justify-self: start;
    margin: 0;
    padding: 0;
    padding-inline-start: 5px;
    padding-inline-end: 5px;
    border: none;
    background: #c7d2fe;
    font: inherit;
    outline: none;
    border-radius: 10px;
}

.main-content{
    grid-column: 2/3;
    padding: 1.7rem;
    display: grid;
    gap: 1.5rem;
    grid-template-columns: 3fr 200px;
    grid-template-rows: 28.5px 1fr;
    align-items: start;
    overflow-y: scroll;
}
.left-items{
    display: grid;
    gap: 1.7rem;
    grid-template-columns: repeat(auto-fit, minmax(300px, 1fr));
    grid-template-rows: 250px;
    grid-auto-rows: 250px;
    
}
.left-items>div>img{
    min-height: 100%;
    width: 100%;
    object-fit: cover;
    box-shadow: 1px 0px 2px rgba(0, 0, 0, 0.302);
}
.left-items>div{
    height: 250px;
    background-color: #eef2ff;
    box-shadow: 1px 1px 3px rgba(0, 0, 0, 0.302);
    border-radius: 1rem;
    overflow: hidden;
    display: grid;
    grid-template-columns: 150px 1fr;
    transition: transform 0.3s;
}
.left-items>div:hover{
    transform: translateY(-5px);
}
.left-items>div:active{
    background-color: #cccccc;
} 

.description{
    display: grid;
    grid-template-rows: 4fr 1fr;
}
.description>p{
    padding: 2.5rem 1rem 0px;
    font-size: 1.4rem;
    font-weight: 900;
    line-height: 1.2rem;
    height: 160px;
    overflow: hidden;
}
.description>p>span{
    font-size: 1rem;
    font-weight: 100;
    color: rgb(83, 83, 83);
}
.links{
    display: grid;
    grid-template-columns: 1fr repeat(2, 50px);
    padding-right: 10px;
    align-items: center;
    justify-items: center;
    font-size: 1.2rem;
}
.right-items{
    display: grid;
    grid-template-columns: 1fr;
    gap: 1.5rem;
}
.right-items>div{
    height: 317px;
    box-shadow: 1px 1px 3px rgba(0, 0, 0, 0.302);
    background-color: #eef2ff;
    border-radius: 1rem;
    padding: 24px;
    padding-top: 10px;
    padding-bottom: 10px;
    display: grid;
}
.right-items :nth-child(1){
    grid-template-rows: 1fr 1px 1fr 1px 1fr;
}

.right-items :nth-child(1)>div{
    overflow: hidden;
    text-overflow: ellipsis;
    align-self: center;
   
    
}
divider{
    background-color: rgb(188, 188, 188);
}

.right-items :nth-child(3){
    grid-template-rows: repeat(6, 1fr);
    grid-template-columns: 35px 1fr;
    grid-column-gap: 10px;
    align-items: center;
    justify-items: start;
    font-size: 0.8rem;
}

.right-items :nth-child(3)>img{
    height: 35px;
    border-radius: 50%;
}

.your-projects{
    grid-column: 1 / 3;
    grid-row: 1 / 2;
}

.whats-new{
    grid-column: 2 / 3;
    grid-row: 1 / 2;
}

.right-items span{
    font-size: 0.8rem;
    color: rgb(83, 83, 83);
}

@keyframes fadeIn {
    0% { opacity: 0; }
    100% { opacity: 1; }
  }
  
@media (max-width: 700px){
    .container{
        grid-template-columns: 1fr;
        grid-template-rows: 130px 1fr 80px;
    }
    .sidebar{
        grid-row: 3/4;
        grid-column: 1 / 3;
        width: 100%;
        grid-template-columns: 1fr;
        
    }
    .sidebar:hover{
        width: 100%;
    }
    .sidebar-tabs{
        grid-template-columns: repeat(10, 1fr);
        grid-auto-columns: 0px;
    }
    .sidebar:hover .sidebar-tabs>p {
        display: none; 
    }
    .sidebar:hover .sidebar-tabs{
        grid-template-columns: repeat(10, 1fr);
        grid-auto-columns: 0px;
    }
    .hamburger{
        display: none;
    }
    .spacer{
        display: none;
    }
    .header{
        grid-column: 1 / 3;
    }
}

@media (max-width: 984px){
    .greetings{
        align-items: center;
    }
    .greetings>p{
        font-size: 2vw;
        margin-top: 0px;
        
    }
    .greetings>p>span{
        font-size: 1.5vw;
    }
}

@media (max-width: 575px){
    .header{
        padding-right: 15px;
    }
    .header> :nth-child(2){
        grid-template-columns: 0px 1fr;
    }
    .greetings>p{
        display: none;
    }
    .greetings>img{
        display: none;
    }
    .main-content{
        grid-template-columns: 1fr;
        grid-template-rows: 28.5px 1fr 28.5px 1fr;
        column-gap: 0px;
    }
    .left-items{
        grid-row: 2 / 3;
    }
    .whats-new{
        grid-column: 1 / 2;
        grid-row: 3 / 4;
    }
    .right-items{
        grid-row: 4 / 5;
    }
}

@media (max-width:400px){
    input[type="search"]{
        display: none;
    }
    .header> :nth-child(1){
        grid-template-columns: 60px 60px 60px 1fr;
    }
    .header> :nth-child(1)>p{
        padding-left: 10px;
    }
}

/* @media screen and (max-width: 650px) {
    .container{
        height: -webkit-fill-available;
    }
  } */

